--- a/sac.css
+++ b/sac.css
@@ -34,7 +34,7 @@ nav {
 }
 
 body {
-    background-color: blue;
+    background-color: #fbf1c7;
 	color: #3c3836;
 	font-family: Verdana;
 	font-size: 16px;
