--- a/sac.css
+++ b/sac.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    color: #f9f5d7;
+    color: green;
     font-family: Verdana;
     background-color: #928374;
     height: 100px;
