--- a/sac.css
+++ b/sac.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    color: green;
+    color: #d79921;
     font-family: Verdana;
     background-color: #928374;
     height: 100px;
