--- a/sac.css
+++ b/sac.css
@@ -7,17 +7,13 @@ header {
     color: #f9f5d7;
     font-family: Verdana;
     background-color: #928374;
-    height: 100px;
-}
-
-header > h1 {
-    font-size: 10px;
-    margin-bottom: 5px;
+    height: 90px;
+    font-size: small;
 }
 
 #unLogo {
-	height: 90px;
-	max-width: 110px;
+	height: 70px;
+	max-width: 90px;
     float: left;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -25,16 +21,25 @@ header > h1 {
     margin-right: 10px;
 }
 
+a {
+    text-decoration: none;
+    color: #3c3836;
+}
+
 nav {
-	text-align: center;
-	height: 100px;
-	padding: 8px;
+    height: 100px;
+    padding: 8px;
+    text-align: center;
+}
+
+.navi {
     display: inline-block;
-    float: right;
+    padding: 14px;
+    background-color: #bdae93;
 }
 
 body {
-    background-color: blue;
+    background-color: #fbf1cf;
 	color: #3c3836;
 	font-family: Verdana;
 	font-size: 16px;
