--- a/sac.css
+++ b/sac.css
@@ -11,6 +11,10 @@ header {
     font-size: small;
 }
 
+title {
+    float: left;
+}
+
 #unLogo {
 	height: 70px;
 	max-width: 90px;
@@ -36,6 +40,8 @@ nav {
     display: inline-block;
     padding: 14px;
     background-color: #bdae93;
+    border-radius: 10px;
+    float: right;
 }
 
 body {
@@ -44,4 +50,20 @@ body {
 	font-family: Verdana;
 	font-size: 16px;
 	line-height: 1.5;
+}
+
+section {
+    background-color: #928374;
+    padding-top: 100px;
+}
+
+section > h3 {
+    color: #d79921;
+}
+
+button {
+    background-color: #928374;
+    color: #fbf1cf;
+    border: solid 3px black;
+    border-radius: 3px;
 }
