--- a/sac.css
+++ b/sac.css
@@ -8,11 +8,11 @@ header {
     font-family: Verdana;
     background-color: #928374;
     height: 90px;
-    font-size: small;
 }
 
 title {
     float: left;
+    padding-right: 200px;
 }
 
 #unLogo {
@@ -25,24 +25,43 @@ title {
     margin-right: 10px;
 }
 
+#webLogo {
+    float: left;
+    font-size: 10px;
+    padding-right: 200px;
+}
+
 a {
     text-decoration: none;
     color: #3c3836;
 }
 
 nav {
-    height: 100px;
-    padding: 8px;
-    text-align: center;
+    height: auto;
+    padding: 1px;
+    padding-top: 10px;
+    width: auto;
 }
 
 .navi {
     display: inline-block;
     padding: 14px;
     background-color: #bdae93;
-    border-radius: 10px;
-    float: right;
+    border-radius: 5px;
+    border: solid 3px #928374
 }
+
+ul {
+    display: flex;
+    font-size: 1vw;
+    padding-left: 290px;
+}
+
+@media (max-width: 1100px) {
+    #webLogo {
+        padding-right: none;
+    }
+  }
 
 body {
     background-color: #fbf1cf;
@@ -53,8 +72,9 @@ body {
 }
 
 section {
-    background-color: #928374;
+    background-color: #7c6f64;
     padding-top: 100px;
+    height: 400px;
 }
 
 section > h3 {
