--- a/sac.css
+++ b/sac.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    color: #d79921;
+    color: #bdae93;
     font-family: Verdana;
     background-color: #928374;
     height: 90px;
@@ -28,7 +28,7 @@ title {
 #webLogo {
     float: left;
     font-size: 10px;
-    padding-right: 200px;
+    padding-right: 320px;
 }
 
 a {
@@ -40,7 +40,6 @@ nav {
     height: auto;
     padding: 1px;
     padding-top: 10px;
-    width: auto;
 }
 
 .navi {
@@ -51,17 +50,25 @@ nav {
     border: solid 3px #928374
 }
 
+.activeNavi {
+    background-color: #d2b67d;
+    display: inline-block;
+    padding: 14px;
+    border-radius: 5px;
+    border: solid 3px #928374
+}
+
+@media only screen and (max-width: 800px) {
+    nav {
+        visibility: hidden;
+    }
+  }
+
 ul {
     display: flex;
     font-size: 1vw;
     padding-left: 290px;
 }
-
-@media (max-width: 1100px) {
-    #webLogo {
-        padding-right: none;
-    }
-  }
 
 body {
     background-color: #fbf1cf;
@@ -74,16 +81,38 @@ body {
 section {
     background-color: #7c6f64;
     padding-top: 100px;
+    height: 500px;
+}
+
+#photo1 {
     height: 400px;
+    width: 40%;
+    float: right;
+    border: solid 5px black;
+    margin-left: 10px;
+    margin-right: 50px;
+    margin-bottom: 50px;
+}
+
+#photo2 {
+    height: 250px;
+    width: 33%;
+    float: right;
 }
 
 section > h3 {
-    color: #d79921;
+    color: #bdae93;
 }
 
 button {
     background-color: #928374;
     color: #fbf1cf;
     border: solid 3px black;
+    border-radius: 3px;
+}
+
+#textBox1 {
+    float: left;
+    border: solid 5px #3c3836;
     border-radius: 3px;
 }
