--- a/sac.css
+++ b/sac.css
@@ -24,8 +24,9 @@ header {
 }
 
 #webLogo {
-    float: left;
-    font-size: 9px;
+    float:inline-start;
+    display: flex;
+    font-size: 8px;
     color: #bdae93;
 }
 
@@ -36,11 +37,10 @@ a {
 
 nav {
     height: auto;
-    float: inline-end;
+    float: right;
     margin-right: 10px;
-    padding: 1px;
-    padding-top: 15px;
-    font-size: small;
+    font-size: x-small;
+    margin-top: 20px;
 }
 
 .navi {
@@ -78,8 +78,8 @@ body {
 
 section {
     background-color: #7c6f64;
-    padding-top: 100px;
-    height: 500px;
+    padding-top: 20px;
+    height: auto;
 }
 
 #photo1 {
@@ -87,8 +87,8 @@ section {
     width: 60%;
     float: right;
     border: solid 5px black;
-    margin-left: 10px;
-    margin-right: 50px;
+    margin-left: 50px;
+    margin-right: 10px;
     margin-bottom: 50px;
 }
 
@@ -100,7 +100,7 @@ section {
 
 section > h3 {
     color: #bdae93;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 #webDesc > p {
@@ -143,16 +143,17 @@ button:hover {
 }
 
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 825px) {
     nav {
 		display: none;
 	}
 
     #navBar {
-		display: block;
-		float: right;
-		padding: 12px;
-		height: 55%;
-		background-color: #e1dbe1;
-    }
+        height: 40px;
+        display: grid;
+        margin-left: 500px;
+        font-size: medium;
+        margin-bottom: 20%;
+        background-color: aqua;
+    } 
 }
