--- a/sac.css
+++ b/sac.css
@@ -1,147 +1,153 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Verdana;
-}
-
-#navBar {
-    display: none;
-    margin-top: 0px;
 }
 
 header {
-    background-color: #928374;
-    height: 90px;
+	background-color: #cdaa75;
+	height: 100px;
 }
 
-.unLogo {
+header > h1 {
+	line-height: 150%;
+	float: left;
+	margin-top: 20px;
+	margin-left: 2%;
+	font-size: 20px;
+}
+
+header > #webLogo {
 	height: 80px;
-	max-width: 100px;
-    float: left;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-#webLogo {
-    float: left;
-    width: 20%;
-    display: flex;
-    font-size: 8px;
-    color: #bdae93;
+	width: 80px;
+	float: left;
+	margin-left: 10px;
+	margin-top: 10px;
 }
 
 a {
-    text-decoration: none;
-    color: #3c3836;
+	text-decoration: none; 
+}
+
+a:link {
+	color: black;
+}
+
+a:hover {
+	color: #573A56;
+}
+
+a:visited {
+	color: #B8195A;
 }
 
 nav {
-    height: auto;
-    float: right;
-    padding-top: 5px;
-    margin-right: 10px;
-    font-size: x-small;
+	text-align: right;
 }
 
-.navi {
-    padding: 14px;
-    background-color: #bdae93;
-    border-radius: 5px;
-    border: solid 3px #928374
+.nav, .activeNav {
+	display: inline-block;
+	padding: 10px;
+	margin-top: 25px;
+	background-color: #bdae93;
+	border: solid 3px #928374;
+	border-radius: 5px;
+	margin-right: 5px;
+	font-size: 10px;
 }
 
+.activeNav {
+	background-color: #d2b67d;
+}
 
-.navi:hover {
+.nav:hover {
     background-color: #fbf1cf;
 }
 
-.activeNavi {
-    background-color: #d2b67d;
-    display: inline-block;
-    padding: 14px;
-    border-radius: 5px;
-    border: solid 3px #928374
+
+
+#mainSec {
+	position: relative;
+	text-align: center;
 }
 
-ul {
-    display: flex;
-    list-style-type: none;
+#mainSecImg {
+	height: 600px;
+	width: 100%;
+	border-bottom: solid black 5px;
+	border-top: solid black 5px;
 }
+
+h2 {
+	top: 15%;
+	left: 20px;
+	position: absolute;
+}
+
+#mainSec > p {
+	bottom: 18%;
+	left: 20px;
+	position: absolute;
+	border: 5px solid black;
+	height: fit-content;
+	padding-top: 4px;
+	padding-bottom: 4px;
+	padding-left: 4px;
+	padding-right:4px;
+	max-width: 40%;
+	background-color: rgba(0,0,0,.5);
+	color: white;
+}
+
+#mainBtn {
+	background-color: #B8195A;
+	color: white;
+	text-transform: uppercase;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	padding-left: 10px;
+	padding-right: 10px;
+	height: fit-content;
+	font-weight: 700;
+	font-size: 16px;
+	border: 2px solid #B8195A;
+	cursor: pointer;
+	bottom: 10%;
+	left: 20px;
+	position: absolute;
+}
+
+
 
 body {
-    background-color: #fbf1cf;
-    color: #3c3836;
-	font-family: Verdana;
+	background-color: #EFF4F7;
+	color: #3F2860;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
 }
 
-section {
-    background-color: #7c6f64;
-    padding-top: 20px;
-    height: auto;
-}
-
-#photo1 {
-    height: 400px;
-    width: 60%;
-    float: right;
-    border: solid 5px black;
-    margin-left: 50px;
-    margin-right: 10px;
-    margin-bottom: 50px;
-}
-
-#photo2 {
-    height: 250px;
-    width: 33%;
-    float: right;
-}
-
-section > h3 {
-    color: #bdae93;
-    font-size: 20px;
-}
-
-#webDesc > p {
-    display: flex;
-    background-color: #fbf1cf;
-    padding-right: 6px;
-    padding-left: 6px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    margin-top: 20px;
-    margin-left: 10px;
-    border: solid 3px #3c3836;
-    border-radius: 8px;
-}
-
-
-button {
-    background-color: #928374;
-    color: #fbf1cf;
-    border: solid 3px black;
-    border-radius: 3px;
-    padding-right: 6px;
-    padding-left: 6px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-}
-
-button:hover {
-    background-color: #d2b67d;
-}
-
-#textBox1 {
+.service {
     display: inline-block;
-    border: solid 5px #3c3836;
-    border-radius: 3px;
+    width: 47%;
+    background-color: white;
+	padding-top: 24px;
+	padding-bottom: 24px;
+	padding-left: 11px;
+	padding-right: 11px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 5px;
+	margin-right: auto;
+	text-align: center;
+	border-radius: 20px;
+	box-sizing: border-box;
+}
+
+
+
+.goalTitle {
+    text-align: center;
+    padding: 1%;
 }
 
 .goalMainText {
@@ -154,11 +160,9 @@ button:hover {
     margin-top: 1%;
     text-align: left;
     word-break: keep-all;
+}
 
-}
-.footer {
-    text-align: center;
-}
+
 #imfLogo {
     float: left;
     width: 30%;
@@ -177,26 +181,68 @@ button:hover {
     /* starts text lower down to prevent wordwrap with images */
 }
 
-.goalTitle {
-    text-align: center;
-    padding: 1%;
+
+
+footer {
+	background-color: #573A56;
+	font-size: 0.7em;
+	text-align: center;
+	color: #fff9e8;
+	padding: 16px;
+	margin-top: 32px;
 }
-@media only screen and (max-width: 825px) {
-    nav {
-		display: none;
+
+footer a:link {
+	color: #fff9e8;
+}
+
+footer a:hover {
+	color: #e8fff9;
+}
+
+
+@media only screen and (max-width: 870px) {
+
+	#navBar{
+		display: block;
+		float: right;
+		margin-top: 20px;
+		margin-right: 30px;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		padding-left: 15px;
+		padding-right: 15px;
+		font-size: 25px;
+		text-align: center;
+		background-color: #c59d5f;
 	}
 
-    #navBar {
-        height: 40px;
-        display: grid;
-        margin-left: 500px;
-        font-size: medium;
-        margin-bottom: 20%;
-        background-color: aqua;
-    }
-    .goalMainText {
-        margin-right: 5%;
-        margin-left: 5%;
 
-    }
+	.nav, .activeNav {
+		display: block;
+		width: 78%;
+		margin: 0;
+		font-size: 12px;
+		padding-right: 5px;
+		text-align: center;
+		background-color: #e1dbe1;
+	}
+	.nav:hover {
+		background-color: #f4f0f4;
+	}
+	#mainNav {
+		position: absolute;
+		right: 10px;
+		z-index: 1;
+		top: 20px;
+	}
+	.mainNav {
+		height: 0;
+		overflow: hidden;
+	}
+	.showNav {
+		height: auto;
+		margin-top: 65px;
+	}
 }
+
