--- a/sac.css
+++ b/sac.css
@@ -200,10 +200,13 @@ footer a:hover {
 	color: #e8fff9;
 }
 
-
+#navBar {
+	visibility: hidden;
+}
 @media only screen and (max-width: 870px) {
 
 	#navBar{
+		visibility: visible;
 		display: block;
 		float: right;
 		margin-top: 20px;
