--- a/sac.css
+++ b/sac.css
@@ -172,6 +172,23 @@ body {
     word-break: keep-all;
 }
 
+.goalFurtherDetail {
+	position: relative;
+	border: solid 5px red;
+	border-radius: 3px;
+	padding: 1%;
+	margin-top: 1%;
+	margin-left: 40%;
+	margin-right: 40%;
+	text-align: center;
+	color: blue;
+
+}
+
+.goalFurtherDetail:link {
+	color: blue;
+	text-align: center;
+}
 
 #imfLogo {
     float: left;
