--- a/sac.css
+++ b/sac.css
@@ -329,6 +329,24 @@ footer a:hover {
 #navBar {
 	visibility: hidden;
 }
+
+#showMore {
+	display: none;
+}
+
+#readMoreBtn {
+	background-color: #B8195A;
+	margin-left: 40%;
+	margin-right: 40%;
+	color: white;
+	width: 100px;
+	height: 30px;
+	font-weight: 500;
+	font-size: 16px;
+	border: 2px solid #B8195A;
+	cursor: pointer;
+}
+
 @media only screen and (max-width: 870px) {
 
 	#navBar{
