--- a/sac.css
+++ b/sac.css
@@ -233,6 +233,13 @@ body {
 	margin-top: 1%;
 }
 
+.pfp {
+	float: right;
+    width: 10%;
+	border: 2px solid black;
+    border-radius: 75px;
+}
+
 
 
 #econSecond {
