--- a/SAC/public/sac.css
+++ b/SAC/public/sac.css
@@ -10,6 +10,7 @@ header > h1 {
 	margin-top: 20px;
 	margin-left: 2%;
 	font-size: 20px;
+	color: #9d0006;
 }
 
 header > #webLogo {
@@ -79,11 +80,13 @@ nav {
 }
 
 h2 {
-	top: 15%;
+	top: 12%;
 	left: 20px;
 	position: absolute;
-	-webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: white;
+	font-size: 2em;
+	color: #d79921;
+	-webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #3c3836;
 }
 
 #mainSec > p {
@@ -102,7 +105,7 @@ h2 {
 }
 
 #mainBtn {
-	background-color: #B8195A;
+	background-color: #d65d0e;
 	color: white;
 	text-transform: uppercase;
 	padding-top: 6px;
@@ -112,7 +115,7 @@ h2 {
 	height: fit-content;
 	font-weight: 700;
 	font-size: 16px;
-	border: 2px solid #B8195A;
+	border: 2px solid #fbf1cf;
 	cursor: pointer;
 	bottom: 10%;
 	left: 20px;
@@ -124,9 +127,11 @@ h2 {
 	z-index: 5;
 	top: 15%;
 	right: 0%;
-	background-color: white;
-	color: red;
+	background-color: #3c3836;
+	color: #d79921;
 	text-align: right;
+	padding-left: 2px;
+	padding-right: 2px;
 }
 
 /* Body */
@@ -141,18 +146,20 @@ body {
 .service {
     display: inline-block;
     width: 47%;
-    background-color: white;
+    background-color: #bdae93;
 	padding-top: 24px;
 	padding-bottom: 24px;
 	padding-left: 11px;
 	padding-right: 11px;
 	margin-top: 20px;
+	margin-left: 20px;
 	margin-bottom: 20px;
-	margin-left: 5px;
-	margin-right: auto;
-	text-align: center;
 	border-radius: 20px;
 	box-sizing: border-box;
+}
+
+.service > h3 {
+	text-align: center;
 }
 
 * {
@@ -350,15 +357,15 @@ footer a:hover {
 }
 
 #readMoreBtn {
-	background-color: #B8195A;
+	background-color: #d65d0e;
+	color: white;
 	margin-left: 40%;
 	margin-right: 40%;
-	color: white;
 	width: 100px;
 	height: 30px;
 	font-weight: 500;
 	font-size: 16px;
-	border: 2px solid #B8195A;
+	border: 2px solid #d79921;
 	cursor: pointer;
 }
 
@@ -415,5 +422,17 @@ footer a:hover {
 		visibility: hidden;
 	}
 
+	.service {
+		display: block;
+		padding-top: 24px;
+		padding-bottom: 24px;
+		padding-left: 11px;
+		padding-right: 11px;
+		margin-top: 20px;
+		margin-bottom: 20px;
+		border-radius: 20px;
+		margin-left: 30%;
+		margin-right: 30%;
+	}
 }
 
